[package]
name = "diesel_as_wrap"
version = "0.1.0"
edition = "2021"
authors = ["RedIODev"]
readme = "./README.md"
repository = "https://github.com/RedIODev/diesel_as_wrap"
description = "A crate helping to wrap types to support (de)serialization using diesel."
license = "GPL-3.0"
keywords = ["diesel", "wrapper", "macro", "serialization", "deserialization"]
categories = ["rust-patterns", "encoding", "development-tools::declarative-macro-helpers"]
[dependencies]
diesel = "2.2.6"

